
add_compile_definitions(OSPL_VERSION=6.9.190705OSS)

add_subdirectory(abstraction/os)
add_subdirectory(abstraction/os-net)
add_subdirectory(utilities)
add_subdirectory(database)
add_subdirectory(tools)
add_subdirectory(configuration)
add_subdirectory(cpp)
add_subdirectory(kernel)
add_subdirectory(user)
add_subdirectory(api)